@@ -1,3 +1,10 @@
+2022-07-05T16:16:48Z:
+* notice: last 14d: unq all: 2 24
+* notice: prev accum: outdated-unq outdated-all / unq all: 203 376 / 218 400
+* notice: next accum: outdated-unq outdated-all / unq all: 204 377 / 218 401
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [2022-06-21] / [2022-07-05]
+
 2022-07-05T08:14:50Z:
 * notice: last 14d: unq all: 2 24
 * notice: prev accum: outdated-unq outdated-all / unq all: 203 376 / 217 399
